--- a/sticky.html
+++ b/sticky.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-permalink: /featured/
-title: FEATURED POSTS
+permalink: /sticky/
+title: Sticky Posts
 description: "An archive of posts sorted by date."
 ---
 {% assign featuredcount = '0' %}
