Updates on multiple pages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Blog Home
+title: Home
 description: "Shankar Damodaran's Personal Blog."
 headline: My personal rants
 tags: [sh4]
