--- a/trending.html
+++ b/trending.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-permalink: /sticky/
-title: Sticky Posts
+permalink: /trending/
+title: Trending Posts
 description: "An archive of posts sorted by date."
 ---
 {% assign featuredcount = '0' %}
