--- a/tags.html
+++ b/tags.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Tag Index
+title: Tags
 permalink: /tags/index.html
 description: "An archive of posts sorted by tag."
 ---
