--- a/expenses.html
+++ b/expenses.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png" />
     <meta name="apple-itunes-app" content="app-id=458023433, affiliate-data=partnerId=30&siteID=T4zFPuSHh2U" />
-    <title>Splitwise</title>
+    <title>Pondy Trip - Expenses</title>
     <meta name="csrf-param" content="authenticity_token" />
 <meta name="csrf-token" content="/ACFPCUMIGIgXDg49ywJzWZ9V7SZ78rzMRjQU0XC5ptcChnQ4yCiyhBKPFDAiJsnZMU7e3ukkw2F2RujpBjl2g==" />
     <!--[if lt IE 9]>
