--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ tags: [sh4]
     	{% endif %}
 	</nav>
 {% else %}
-	{% for post in site.posts %}
+	{% for post in paginator.posts %}
     <article class="notepad-index-post post row">
         <div class="small-12 medium-3 large-2 columns datetime">
             <span class="notepad-post-meta">
