--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@ tags: [sh4]
 	{% endfor %}
    
    {% if paginator.total_pages > 1 %}
+   <nav class="pagination" role="navigation">
 <div class="pagination">
   {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
+    <a class="older-posts" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Previous</a>
   {% else %}
-    <span>&laquo; Prev</span>
+    <span><a class="older-posts faded">&laquo; Previous</a></span>
   {% endif %}
 
+  <!-- For inbetween pages...
   {% for page in (1..paginator.total_pages) %}
     {% if page == paginator.page %}
       <em>{{ page }}</em>
@@ -58,11 +60,11 @@ tags: [sh4]
       <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
     {% endif %}
   {% endfor %}
-
+ -->
   {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
+    <a class="newer-posts" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
   {% else %}
-    <span>Next &raquo;</span>
+    <span><a class="newer-posts faded">Next &raquo;</a></span>
   {% endif %}
 </div>
 {% endif %}
