--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ tags: [sh4]
   {% if paginator.previous_page %}
     <a class="older-posts" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Previous</a>
   {% else %}
-    <span><a class="older-posts faded">&laquo; Previous</a></span>
+    <span class="older-posts faded">&laquo; Previous</span>
   {% endif %}
 
   <!-- For inbetween pages...
@@ -64,7 +64,7 @@ tags: [sh4]
   {% if paginator.next_page %}
     <a class="newer-posts" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
   {% else %}
-    <span><a class="newer-posts faded">Next &raquo;</a></span>
+    <span class="newer-posts faded">Next &raquo;</span>
   {% endif %}
 </div>
 {% endif %}
