--- a/1/index.html
+++ b/1/index.html
@@ -2,8 +2,8 @@
 <head>
 <body>
 
-<iframe class="embed-responsive-item"id="ytplayer" type="text/html" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto" allowfullscreen src="https://www.youtube.com/embed/DAjMZ6fCPOo?&autoplay=1&loop=1&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=DAjMZ6fCPOo"
-      frameborder="0" allowfullscreen></iframe>
+<iframe class="embed-responsive-item"id="ytplayer" type="text/html" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto" src="https://www.youtube.com/embed/DAjMZ6fCPOo?&autoplay=1&loop=1&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=DAjMZ6fCPOo"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       
 </body>
 </html>
