--- a/1/index.html
+++ b/1/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+      <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
       <title>ADvantage Test</title>
       </head>
 <body>
 <iframe class="embed-responsive-item" id="ytplayer" type="text/html" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto" src="https://www.youtube.com/embed/DAjMZ6fCPOo?&autoplay=1&loop=1&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=DAjMZ6fCPOo"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      allowfullscreen></iframe>
       
 </body>
 </html>
