--- a/1/index.html
+++ b/1/index.html
@@ -3,8 +3,9 @@
       <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
       <meta http-equiv="Pragma" content="no-cache">
       <meta http-equiv="Expires" content="0">
+      <title>ADvantage Test</title>
 </head>
 <body>
-<iframe src="https://www.youtube.com/embed/DAjMZ6fCPOo?autoplay=1&loop=1&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=DAjMZ6fCPOo" class="embed-responsive-item"id="ytplayer" type="text/html" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto" allowfullscreen></iframe>      
+<iframe src="https://www.youtube.com/embed/DAjMZ6fCPOo?autoplay=1&loop=1&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=DAjMZ6fCPOo" class="embed-responsive-item" id="ytplayer" type="text/html" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto" allowfullscreen></iframe>      
 </body>
 </html>
